# sonic-sairedis

./: .gitignore  .gitmodules  Makefile.am  azure-pipelines.yml  configure.ac  lgtm.yml  stub.pl
lib/: ClientConfig.cpp  ClientSai.cpp  ClientSai.h  ClientServerSai.cpp  ClientServerSai.h  Context.cpp  ContextConfigContainer.cpp  Makefile.am  OidIndexGenerator.h  Recorder.cpp  Recorder.h  RedisRemoteSaiInterface.cpp  RedisRemoteSaiInterface.h  RedisVidIndexGenerator.cpp  RedisVidIndexGenerator.h  Sai.cpp  Sai.h  ServerConfig.cpp  ServerSai.cpp  ServerSai.h  SkipRecordAttrContainer.cpp  Switch.cpp  Utils.cpp  Utils.h  VirtualObjectIdManager.cpp  VirtualObjectIdManager.h  sai_redis.h  sai_redis_acl.cpp  sai_redis_ars.cpp  sai_redis_ars_profile.cpp  sai_redis_dash_acl.cpp  sai_redis_dash_direction_lookup.cpp  sai_redis_dash_eni.cpp  sai_redis_dash_inbound_routing.cpp  sai_redis_dash_meter.cpp  sai_redis_dash_outbound_ca_to_pa.cpp  sai_redis_dash_outbound_routing.cpp  sai_redis_dash_pa_validation.cpp  sai_redis_dash_vip.cpp  sai_redis_dash_vnet.cpp  (+18 more)
lib/inc/: sai_redis.h
lib/src/: Makefile.am  Recorder.cpp  Switch.cpp  sai_redis_switch.cpp
proxylib/: Makefile.am  Options.cpp  Options.h  Proxy.cpp  Proxy.h  Sai.cpp  Sai.h  sai_proxy.h  sai_proxy_acl.cpp  sai_proxy_ars.cpp  sai_proxy_ars_profile.cpp  sai_proxy_bfd.cpp  sai_proxy_bmtor.cpp  sai_proxy_bridge.cpp  sai_proxy_buffer.cpp  sai_proxy_counter.cpp  sai_proxy_dash_acl.cpp  sai_proxy_dash_direction_lookup.cpp  sai_proxy_dash_eni.cpp  sai_proxy_dash_inbound_routing.cpp  sai_proxy_dash_meter.cpp  sai_proxy_dash_outbound_ca_to_pa.cpp  sai_proxy_dash_outbound_routing.cpp  sai_proxy_dash_pa_validation.cpp  sai_proxy_dash_vip.cpp  sai_proxy_dash_vnet.cpp  sai_proxy_debug_counter.cpp  sai_proxy_dtel.cpp  sai_proxy_fdb.cpp  sai_proxy_genericprogrammable.cpp  sai_proxy_hash.cpp  sai_proxy_hostif.cpp  sai_proxy_interfacequery.cpp  sai_proxy_ipmc.cpp  sai_proxy_ipmc_group.cpp  sai_proxy_ipsec.cpp  sai_proxy_isolation_group.cpp  sai_proxy_l2mc.cpp  sai_proxy_l2mcgroup.cpp  sai_proxy_lag.cpp  (+32 more)
saidump/: Makefile.am  SaiDump.cpp  SaiDump.h  main.cpp  saidump.cpp
tests/: BCM56850.pl  MLNX2700.pl  Makefile.am  NVDAMBF2H536C.pl  TestClient.cpp  TestClient.h  TestDash.cpp  TestDashEnv.cpp  TestDashEnv.h  TestDashMain.cpp  aspell.en.pws  aspellcheck.pl  checksaiapi.sh  checkwhitespace.sh  testclient.cpp  utils.pm
tests/BCM56850/: acl_counter_match.rec  acl_pre_match_999.rec  bulk_neighbor.rec  bulk_object.rec  neighbor_next_hop.rec  port_bulk_get.rec  relaxed.rec  vxlan_default_router_mac.rec
tests/MLNX2700/: inspect_asic.rec
tests/NVDAMBF2H536C/: dashapis.rec  vsprofile.ini
unittest/lib/: Makefile.am  MockSaiInterface.cpp  MockSaiInterface.h  TestClientSai.cpp  TestClientServerSai.cpp  TestRedisRemoteSaiInterface.cpp  TestSai.cpp  TestServerSai.cpp  TestSwitch.cpp  TestUtils.cpp  TestVirtualObjectIdManager.cpp  test_sai_redis_ars.cpp  test_sai_redis_ars_profile.cpp  test_sai_redis_dash_acl.cpp  test_sai_redis_dash_direction_lookup.cpp  test_sai_redis_dash_eni.cpp  test_sai_redis_dash_inbound_routing.cpp  test_sai_redis_dash_outbound_ca_to_pa.cpp  test_sai_redis_dash_outbound_routing.cpp  test_sai_redis_dash_pa_validation.cpp  test_sai_redis_dash_vip.cpp  test_sai_redis_dash_vnet.cpp  test_sai_redis_interfacequery.cpp  test_sai_redis_neighbor.cpp  test_sai_redis_poe.cpp  test_sai_redis_tam.cpp
unittest/proxylib/: Makefile.am  TestProxy.cpp  TestSai.cpp  config.ini  main_libsaiproxy.cpp  test_sai_proxy_acl.cpp  test_sai_proxy_ars.cpp  test_sai_proxy_ars_profile.cpp  test_sai_proxy_bfd.cpp  test_sai_proxy_bmtor.cpp  test_sai_proxy_bridge.cpp  test_sai_proxy_buffer.cpp  test_sai_proxy_counter.cpp  test_sai_proxy_dash_acl.cpp  test_sai_proxy_dash_direction_lookup.cpp  test_sai_proxy_dash_eni.cpp  test_sai_proxy_dash_inbound_routing.cpp  test_sai_proxy_dash_outbound_ca_to_pa.cpp  test_sai_proxy_dash_outbound_routing.cpp  test_sai_proxy_dash_pa_validation.cpp  test_sai_proxy_dash_vip.cpp  test_sai_proxy_dash_vnet.cpp  test_sai_proxy_debug_counter.cpp  test_sai_proxy_dtel.cpp  test_sai_proxy_fdb.cpp  test_sai_proxy_generic_programmable.cpp  test_sai_proxy_hash.cpp  test_sai_proxy_hostif.cpp  test_sai_proxy_interfacequery.cpp  test_sai_proxy_ipmc.cpp  test_sai_proxy_ipmc_group.cpp  test_sai_proxy_isolation_group.cpp  test_sai_proxy_l2mc.cpp  test_sai_proxy_l2mcgroup.cpp  test_sai_proxy_lag.cpp  test_sai_proxy_macsec.cpp  test_sai_proxy_mcastfdb.cpp  test_sai_proxy_mirror.cpp  test_sai_proxy_mpls.cpp  test_sai_proxy_nat.cpp  (+24 more)
unittest/saidump/: Makefile.am  TestSaiDump.cpp  dump.json  main.cpp
unittest/syncd/: Makefile.am  MockableSaiInterface.cpp  MockableSaiInterface.h  MockableSaiSwitchInterface.cpp  MockableSaiSwitchInterface.h  TestAttrVersionChecker.cpp  TestBestCandidateFinder.cpp  TestCommandLineOptions.cpp  TestConcurrentQueue.cpp  TestFlexCounter.cpp  TestMdioIpcServer.cpp  TestNotificationHandler.cpp  TestNotificationProcessor.cpp  TestNotificationQueue.cpp  TestPortStateChangeHandler.cpp  TestSyncd.cpp  TestVendorSai.cpp  TestVirtualOidTranslator.cpp  TestWorkaround.cpp
unittest/vslib/: Makefile.am  TestMACsecManager.cpp  TestRealObjectIdManager.cpp  TestSai.cpp  TestTAM.cpp  (+25 more)
vslib/: ContextConfigContainer.cpp  FdbInfo.cpp  HostInterfaceInfo.cpp  HostInterfaceInfo.h  LaneMapFileParser.cpp  MACsecAttr.h  MACsecManager.cpp  Makefile.am  RealObjectIdManager.cpp  Sai.cpp  Sai.h  SaiUnittests.cpp  Switch.cpp  SwitchConfig.cpp  SwitchConfig.h  SwitchMLNX2700.cpp  SwitchMLNX2700.h  SwitchNvdaMBF2H536C.cpp  SwitchNvdaMBF2H536C.h  SwitchState.cpp  SwitchState.h  SwitchStateBase.cpp  SwitchStateBase.h  SwitchStateBaseHostif.cpp  SwitchStateBaseMACsec.cpp  VirtualSwitchSaiInterface.cpp  VirtualSwitchSaiInterface.h  VirtualSwitchSaiInterfaceFdb.cpp  sai_vs.h  sai_vs_acl.cpp  sai_vs_ars.cpp  sai_vs_ars_profile.cpp  sai_vs_dash_acl.cpp  sai_vs_dash_direction_lookup.cpp  sai_vs_dash_eni.cpp  sai_vs_dash_inbound_routing.cpp  sai_vs_dash_meter.cpp  sai_vs_dash_outbound_ca_to_pa.cpp  sai_vs_dash_outbound_routing.cpp  sai_vs_dash_pa_validation.cpp  (+11 more)
(+189 files in other folders)
